--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@mdi/font": "^3.6.95",
     "ajv": "^6.10.2",
     "axios": "^0.19.0",
+    "roboto-fontface": "*",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^2.0.0"
